2010-07-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1606/cpukit
	* psxfatal_support/init.c: Remove
	INTERNAL_ERROR_INVALID_WORKSPACE_ADDRESS since it is not generated.

2010-07-07	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* psxfatal_support/init.c: Print end of test message in case of
	success.  Stop multitasking in the fatal error extension.
	* psxfatal01/psxfatal01.scn, psxfatal02/psxfatal02.scn: Update.

2010-07-06	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* psxtimes01/init.c: Added missing declaration.

2010-07-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add test for various forms of times() and
	getrusage().
	* psxgetrusage01/.cvsignore, psxgetrusage01/Makefile.am,
	psxgetrusage01/init.c, psxgetrusage01/psxgetrusage01.doc,
	psxgetrusage01/psxgetrusage01.scn, psxtimes01/.cvsignore,
	psxtimes01/Makefile.am, psxtimes01/init.c, psxtimes01/psxtimes01.doc,
	psxtimes01/psxtimes01.scn: New files.

2010-07-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxid01/init.c, psxid01/psxid01.scn: Actually match an entry in
	/etc/passwd and /etc/group.

2010-07-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxid01/init.c, psxid01/psxid01.doc, psxid01/psxid01.scn: Add test
	cases.

2010-07-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psx13/test.c: Fix warning.

2010-07-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxfile01/test_cat.c: Does not need posix specific macros.

2010-07-01	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* psxfile01/Makefile.am, psxfile01/psxfile01.scn, psxfile01/test.c:
	Remove tests which put NULL entries in file handlers.

2010-07-01	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1598/testing
	* Makefile.am, configure.ac, psxpasswd01/init.c,
	psxpasswd01/psxpasswd01.doc, psxpasswd01/psxpasswd01.scn: Add testing
	for POSIX user database (e.g. /etc/group and /etc/passwd) access
	routines which are implemented in libcsupport/src/getpwent.c.