@@ -1,3 +1,9 @@
+2010-07-08	Bharath Suri <bharath.s.jois@gmail.com>
+
+	PR 1608/testing
+	* psxfile01/init.c: Add a simple test case: Open file as read-only
+	and attemp to truncate. Improves coverage.
+
 2010-07-07	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	PR 1606/cpukit
